--- a/product-selector/src/assets/main.css
+++ b/product-selector/src/assets/main.css
@@ -1,4 +1,4 @@
-@import './base.css';
+@import "./base.css";
 
 #app {
   width: 100%;
@@ -6,6 +6,20 @@
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  color: #313131;
+  font-family: "Barlow", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.v-btn {
+  text-transform: none !important;
+}
+
+header {
+  font-family: "Barlow", serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 @media (min-width: 1024px) {
